# misume-extrusion-decoder

./: .gitignore  README.md  agents.md  pyproject.toml
src/extrusion_decoder/: __init__.py  cli.py  decoder.py  encoder_cli.py  voron.py
src/extrusion_decoder/makers/: __init__.py  base.py  misumi.py
src/extrusion_decoder/printers/: __init__.py  base.py  trident.py  voron0.py  voron24.py
tests/: test_bom.py  test_decoder.py
