[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extrusion-decoder"
version = "0.1.0"
description = "Decode MISUMI aluminum extrusion part numbers into human-readable descriptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
misumi-decoder = "extrusion_decoder.cli:main"
voron-encoder = "extrusion_decoder.encoder_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/extrusion_decoder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=extrusion_decoder",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
